<resources>
    <string name="app_name">Calculadora</string>
    <string name="del">DEL</string>
    <string name="c">C</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="sumar">+</string>
    <string name="nueve">9</string>
    <string name="ocho">8</string>
    <string name="siete">7</string>
    <string name="restar">-</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="cuatro">4</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="raizCuadrada">√</string>
    <string name="porcentaje">%</string>
    <string name="parentesis">()</string>
    <string name="punto">.</string>
    <string name="cero">0</string>
    <string name="tan">TAN</string>
    <string name="cos">COS</string>
    <string name="sin">SIN</string>
    <string name="superIndice">X^</string>
    <string name="igual">=</string>
    <string name="off">OFF</string>
    <string name="ctg">CTG</string>
    <string name="xExclamacion">X!</string>
    <string name="sec">SEC</string>
    <string name="csc">CSC</string>
</resources>